Revert changes to Cyrillic Zhe.

--- a/changes/32.3.0.md
+++ b/changes/32.3.0.md
@@ -18,20 +18,15 @@
   - LATIN SMALL LETTER DZ DIGRAPH (`U+02A3`) ... LATIN SMALL LETTER LZ DIGRAPH (`U+02AB`).
   - MODIFIER LETTER SMALL W (`U+02B7`).
   - CYRILLIC CAPITAL LETTER LJE (`U+0409`) ... CYRILLIC CAPITAL LETTER NJE (`U+040A`).
-  - CYRILLIC CAPITAL LETTER ZHE (`U+0416`).
   - CYRILLIC CAPITAL LETTER EF (`U+0424`).
   - CYRILLIC CAPITAL LETTER SHA (`U+0428`) ... CYRILLIC CAPITAL LETTER SHCHA (`U+0429`).
-  - CYRILLIC SMALL LETTER ZHE (`U+0436`).
   - CYRILLIC SMALL LETTER EF (`U+0444`).
   - CYRILLIC SMALL LETTER SHA (`U+0448`) ... CYRILLIC SMALL LETTER SHCHA (`U+0449`).
   - CYRILLIC SMALL LETTER LJE (`U+0459`) ... CYRILLIC SMALL LETTER NJE (`U+045A`).
   - CYRILLIC CAPITAL LETTER OMEGA (`U+0460`) ... CYRILLIC SMALL LETTER OMEGA (`U+0461`).
   - CYRILLIC CAPITAL LETTER OMEGA WITH TITLO (`U+047C`) ... CYRILLIC SMALL LETTER OT (`U+047F`).
-  - CYRILLIC CAPITAL LETTER ZHE WITH DESCENDER (`U+0496`) ... CYRILLIC SMALL LETTER ZHE WITH DESCENDER (`U+0497`).
   - CYRILLIC CAPITAL LETTER PE WITH MIDDLE HOOK (`U+04A6`) ... CYRILLIC SMALL LETTER PE WITH MIDDLE HOOK (`U+04A7`).
-  - CYRILLIC CAPITAL LETTER ZHE WITH BREVE (`U+04C1`) ... CYRILLIC SMALL LETTER ZHE WITH BREVE (`U+04C2`).
   - CYRILLIC CAPITAL LIGATURE A IE (`U+04D4`) ... CYRILLIC SMALL LIGATURE A IE (`U+04D5`).
-  - CYRILLIC CAPITAL LETTER ZHE WITH DIAERESIS (`U+04DC`) ... CYRILLIC SMALL LETTER ZHE WITH DIAERESIS (`U+04DD`).
   - CYRILLIC CAPITAL LETTER KOMI DJE (`U+0502`) ... CYRILLIC SMALL LETTER KOMI ZJE (`U+0505`).
   - CYRILLIC CAPITAL LETTER KOMI LJE (`U+0508`) ... CYRILLIC SMALL LETTER KOMI NJE (`U+050B`).
   - CYRILLIC CAPITAL LETTER YAE (`U+0518`) ... CYRILLIC SMALL LETTER YAE (`U+0519`).
@@ -89,21 +84,16 @@
   - MODIFIER LETTER TURNED W (`U+AB69`).
   - LATIN SMALL LIGATURE FFI (`U+FB03`) ... LATIN SMALL LIGATURE ST (`U+FB06`).
   - MODIFIER LETTER SMALL AE (`U+10783`).
-  - MODIFIER LETTER SMALL CLOSED OMEGA (`U+107A4`).
   - LATIN SMALL LETTER DEZH DIGRAPH WITH PALATAL HOOK (`U+1DF12`).
   - LATIN SMALL LETTER TESH DIGRAPH WITH PALATAL HOOK (`U+1DF17`).
-  - MODIFIER LETTER CYRILLIC SMALL ZHE (`U+1E036`).
   - MODIFIER LETTER CYRILLIC SMALL EF (`U+1E042`).
   - MODIFIER LETTER CYRILLIC SMALL SHA (`U+1E046`).
-  - CYRILLIC SUBSCRIPT SMALL LETTER ZHE (`U+1E057`).
   - CYRILLIC SUBSCRIPT SMALL LETTER EF (`U+1E060`).
   - CYRILLIC SUBSCRIPT SMALL LETTER SHA (`U+1E064`).
 * Add characters:
   - DOUBLE INTERSECTION (`U+22D2`).
   - DOUBLE UNION (`U+22D3`).
-  - LEFT OUTER JOIN (`U+27D5`).
-  - RIGHT OUTER JOIN (`U+27D6`).
-  - FULL OUTER JOIN (`U+27D7`).
+  - LEFT OUTER JOIN (`U+27D5`) ... FULL OUTER JOIN (`U+27D7`).
   - Z NOTATION LEFT BINDING BRACKET (`U+2989`).
   - Z NOTATION RIGHT BINDING BRACKET (`U+298A`).
   - TRIANGLE WITH DOT ABOVE (`U+29CA`).
@@ -112,10 +102,7 @@
   - N-ARY TIMES OPERATOR (`U+2A09`).
   - JOIN (`U+2A1D`).
   - LARGE LEFT TRIANGLE OPERATOR (`U+2A1E`).
-  - CLOSED UNION WITH SERIFS (`U+2A4C`).
-  - CLOSED INTERSECTION WITH SERIFS (`U+2A4D`).
-  - DOUBLE SQUARE INTERSECTION (`U+2A4E`).
-  - DOUBLE SQUARE UNION (`U+2A4F`).
+  - CLOSED UNION WITH SERIFS (`U+2A4C`) ... DOUBLE SQUARE UNION (`U+2A4F`).
   - SLOPING LARGE OR (`U+2A57`).
   - SLOPING LARGE AND (`U+2A58`).
   - LOGICAL AND WITH MIDDLE STEM (`U+2A5A`).
