Harmonize other omega shapes.

--- a/changes/32.3.0.md
+++ b/changes/32.3.0.md
@@ -23,8 +23,8 @@
   - CYRILLIC SMALL LETTER EF (`U+0444`).
   - CYRILLIC SMALL LETTER SHA (`U+0448`) ... CYRILLIC SMALL LETTER SHCHA (`U+0449`).
   - CYRILLIC SMALL LETTER LJE (`U+0459`) ... CYRILLIC SMALL LETTER NJE (`U+045A`).
-  - CYRILLIC CAPITAL LETTER OMEGA (`U+0460`) ... CYRILLIC SMALL LETTER OMEGA (`U+0461`).
-  - CYRILLIC CAPITAL LETTER OMEGA WITH TITLO (`U+047C`) ... CYRILLIC SMALL LETTER OT (`U+047F`).
+  - CYRILLIC CAPITAL LETTER OMEGA (`U+0460`).
+  - CYRILLIC CAPITAL LETTER OMEGA WITH TITLO (`U+047C`).
   - CYRILLIC CAPITAL LETTER PE WITH MIDDLE HOOK (`U+04A6`) ... CYRILLIC SMALL LETTER PE WITH MIDDLE HOOK (`U+04A7`).
   - CYRILLIC CAPITAL LIGATURE A IE (`U+04D4`) ... CYRILLIC SMALL LIGATURE A IE (`U+04D5`).
   - CYRILLIC CAPITAL LETTER KOMI DJE (`U+0502`) ... CYRILLIC SMALL LETTER KOMI ZJE (`U+0505`).
@@ -67,12 +67,13 @@
   - LEFT AND RIGHT DOUBLE TURNSTILE (`U+27DA`) ... LEFT AND RIGHT TACK (`U+27DB`).
   - SHUFFLE PRODUCT (`U+29E2`).
   - LATIN CAPITAL LETTER W WITH HOOK (`U+2C72`) ... LATIN SMALL LETTER W WITH HOOK (`U+2C73`).
-  - CYRILLIC CAPITAL LETTER BROAD OMEGA (`U+A64C`) ... CYRILLIC SMALL LETTER BROAD OMEGA (`U+A64D`).
+  - CYRILLIC CAPITAL LETTER BROAD OMEGA (`U+A64C`).
   - CYRILLIC CAPITAL LETTER DOUBLE MONOCULAR O (`U+A66C`) ... CYRILLIC LETTER MULTIOCULAR O (`U+A66E`).
   - CYRILLIC CAPITAL LETTER ZHWE (`U+A684`) ... CYRILLIC SMALL LETTER CCHE (`U+A687`).
   - CYRILLIC CAPITAL LETTER DOUBLE O (`U+A698`) ... CYRILLIC SMALL LETTER DOUBLE O (`U+A699`).
   - LATIN CAPITAL LETTER AA (`U+A732`) ... LATIN SMALL LETTER AU (`U+A737`).
   - LATIN CAPITAL LETTER OO (`U+A74E`) ... LATIN SMALL LETTER OO (`U+A74F`).
+  - LATIN CAPITAL LETTER OMEGA (`U+A7B6`).
   - MODIFIER LETTER SMALL LIGATURE OE (`U+A7F9`) ... LATIN SMALL CAPITAL LETTER TURNED M (`U+A7FA`).
   - LATIN EPIGRAPHIC LETTER ARCHAIC M (`U+A7FF`).
   - LATIN SMALL LETTER A REVERSED SCHWA (`U+AB31`).
