Make two characters slightly wider.

--- a/changes/32.3.0.md
+++ b/changes/32.3.0.md
@@ -56,6 +56,8 @@
   - LATIN CAPITAL LETTER W WITH GRAVE (`U+1E80`) ... LATIN SMALL LETTER W WITH DOT BELOW (`U+1E89`).
   - LATIN SMALL LETTER W WITH RING ABOVE (`U+1E98`).
   - LATIN SUBSCRIPT SMALL LETTER M (`U+2098`).
+  - TELEPHONE SIGN (`U+2121`).
+  - FACSIMILE SIGN (`U+213B`).
   - MILL SIGN (`U+20A5`).
   - WON SIGN (`U+20A9`).
   - SMALL ROMAN NUMERAL ONE THOUSAND (`U+217F`) ... ROMAN NUMERAL ONE THOUSAND C D (`U+2180`).
