Optimize glyphs/widths for five characters under Quasi-Proportional. (#2615)
* Optimize glyphs for Gha and Cyrillic Dche.

* Make two characters slightly wider.

* Cleanup of `upper-ae-oe.ptl`.

* Fix broken glyph for `cyrl/Dje` under heavy italic slab.

* Shrink diagonal tail of `cyrl/ef` under QP.

--- a/changes/32.3.0.md
+++ b/changes/32.3.0.md
@@ -8,7 +8,6 @@
   - LATIN CAPITAL LETTER W WITH CIRCUMFLEX (`U+0174`) ... LATIN SMALL LETTER W WITH CIRCUMFLEX (`U+0175`).
   - LATIN SMALL LETTER HV (`U+0195`).
   - LATIN CAPITAL LETTER TURNED M (`U+019C`).
-  - LATIN CAPITAL LETTER GHA (`U+01A2`) ... LATIN SMALL LETTER GHA (`U+01A3`).
   - LATIN CAPITAL LETTER AE WITH MACRON (`U+01E2`) ... LATIN SMALL LETTER AE WITH MACRON (`U+01E3`).
   - LATIN CAPITAL LETTER HWAIR (`U+01F6`).
   - LATIN CAPITAL LETTER AE WITH ACUTE (`U+01FC`) ... LATIN SMALL LETTER AE WITH ACUTE (`U+01FD`).
@@ -57,6 +56,8 @@
   - LATIN CAPITAL LETTER W WITH GRAVE (`U+1E80`) ... LATIN SMALL LETTER W WITH DOT BELOW (`U+1E89`).
   - LATIN SMALL LETTER W WITH RING ABOVE (`U+1E98`).
   - LATIN SUBSCRIPT SMALL LETTER M (`U+2098`).
+  - TELEPHONE SIGN (`U+2121`).
+  - FACSIMILE SIGN (`U+213B`).
   - MILL SIGN (`U+20A5`).
   - WON SIGN (`U+20A9`).
   - SMALL ROMAN NUMERAL ONE THOUSAND (`U+217F`) ... ROMAN NUMERAL ONE THOUSAND C D (`U+2180`).
@@ -91,8 +92,6 @@
   - CYRILLIC SUBSCRIPT SMALL LETTER EF (`U+1E060`).
   - CYRILLIC SUBSCRIPT SMALL LETTER SHA (`U+1E064`).
 * Add characters:
-  - DOUBLE INTERSECTION (`U+22D2`).
-  - DOUBLE UNION (`U+22D3`).
   - LEFT OUTER JOIN (`U+27D5`) ... FULL OUTER JOIN (`U+27D7`).
   - Z NOTATION LEFT BINDING BRACKET (`U+2989`).
   - Z NOTATION RIGHT BINDING BRACKET (`U+298A`).
@@ -111,6 +110,5 @@
   - Z NOTATION RANGE ANTIRESTRICTION (`U+2A65`).
   - SMALLER THAN (`U+2AAA`) ... LARGER THAN OR EQUAL TO (`U+2AAD`).
   - CLOSED SUBSET (`U+2ACF`) ... CLOSED SUPERSET OR EQUAL TO (`U+2AD2`).
-  - ANTICLOCKWISE TRIANGLE-HEADED RIGHT U-SHAPED ARROW (`U+2B8C`) ... ANTICLOCKWISE TRIANGLE-HEADED TOP U-SHAPED ARROW (`U+2B8F`).
-  - RETURN LEFT (`U+2B90`) ... FOUR CORNER ARROWS CIRCLING ANTICLOCKWISE (`U+2B94`).
+  - ANTICLOCKWISE TRIANGLE-HEADED RIGHT U-SHAPED ARROW (`U+2B8C`) ... FOUR CORNER ARROWS CIRCLING ANTICLOCKWISE (`U+2B94`).
   - DOWNWARDS TRIANGLE-HEADED ARROW WITH LONG TIP LEFTWARDS (`U+2BA0`) ... RIGHTWARDS TRIANGLE-HEADED ARROW WITH LONG TIP DOWNWARDS (`U+2BA7`).
