Add dezh and tesh with retroflex hook. (#2263)

--- a/changes/32.3.0.md
+++ b/changes/32.3.0.md
@@ -45,8 +45,8 @@
   - MODIFIER LETTER CAPITAL W (`U+1D42`).
   - MODIFIER LETTER SMALL TURNED AE (`U+1D46`).
   - MODIFIER LETTER SMALL M (`U+1D50`).
-  - MODIFIER LETTER SMALL TURNED M (`U+015A`).
-  - LATIN SMALL LETTER UE (`U+016B`).
+  - MODIFIER LETTER SMALL TURNED M (`U+1D5A`).
+  - LATIN SMALL LETTER UE (`U+1D6B`).
   - LATIN SMALL LETTER M WITH MIDDLE TILDE (`U+1D6F`).
   - LATIN SMALL LETTER M WITH PALATAL HOOK (`U+1D86`).
   - MODIFIER LETTER SMALL M WITH HOOK (`U+1DAC`) ... MODIFIER LETTER SMALL TURNED M WITH LONG LEG (`U+1DAD`).
@@ -112,3 +112,5 @@
   - CLOSED SUBSET (`U+2ACF`) ... CLOSED SUPERSET OR EQUAL TO (`U+2AD2`).
   - ANTICLOCKWISE TRIANGLE-HEADED RIGHT U-SHAPED ARROW (`U+2B8C`) ... FOUR CORNER ARROWS CIRCLING ANTICLOCKWISE (`U+2B94`).
   - DOWNWARDS TRIANGLE-HEADED ARROW WITH LONG TIP LEFTWARDS (`U+2BA0`) ... RIGHTWARDS TRIANGLE-HEADED ARROW WITH LONG TIP DOWNWARDS (`U+2BA7`).
+  - LATIN SMALL LETTER DEZH DIGRAPH WITH RETROFLEX HOOK (`U+1DF19`).
+  - LATIN SMALL LETTER TESH DIGRAPH WITH RETROFLEX HOOK (`U+1DF1C`).
