--- a/changes/32.3.0.md
+++ b/changes/32.3.0.md
@@ -1,11 +1,10 @@
 * Make certain M-width characters slightly wider under Quasi-Proportional. Affected characters:
   - LATIN CAPITAL LETTER W (`U+0057`).
   - LATIN SMALL LETTER M (`U+006D`).
-  - LATIN SMALL LETTER W (`U+0077`).
   - LATIN CAPITAL LETTER AE (`U+00C6`).
   - LATIN SMALL LETTER AE (`U+00E6`).
   - LATIN CAPITAL LIGATURE OE (`U+0152`) ... LATIN SMALL LIGATURE OE (`U+0153`).
-  - LATIN CAPITAL LETTER W WITH CIRCUMFLEX (`U+0174`) ... LATIN SMALL LETTER W WITH CIRCUMFLEX (`U+0175`).
+  - LATIN CAPITAL LETTER W WITH CIRCUMFLEX (`U+0174`).
   - LATIN SMALL LETTER HV (`U+0195`).
   - LATIN CAPITAL LETTER TURNED M (`U+019C`).
   - LATIN CAPITAL LETTER AE WITH MACRON (`U+01E2`) ... LATIN SMALL LETTER AE WITH MACRON (`U+01E3`).
@@ -13,9 +12,7 @@
   - LATIN CAPITAL LETTER AE WITH ACUTE (`U+01FC`) ... LATIN SMALL LETTER AE WITH ACUTE (`U+01FD`).
   - LATIN SMALL LETTER DB DIGRAPH (`U+0238`) ... LATIN SMALL LETTER QP DIGRAPH (`U+0239`).
   - LATIN SMALL LETTER TURNED M (`U+026F`) ... LATIN SMALL LETTER M WITH HOOK (`U+0271`).
-  - LATIN SMALL LETTER TURNED W (`U+028D`).
   - LATIN SMALL LETTER DZ DIGRAPH (`U+02A3`) ... LATIN SMALL LETTER LZ DIGRAPH (`U+02AB`).
-  - MODIFIER LETTER SMALL W (`U+02B7`).
   - CYRILLIC CAPITAL LETTER LJE (`U+0409`) ... CYRILLIC CAPITAL LETTER NJE (`U+040A`).
   - CYRILLIC CAPITAL LETTER SHA (`U+0428`) ... CYRILLIC CAPITAL LETTER SHCHA (`U+0429`).
   - CYRILLIC SMALL LETTER EF (`U+0444`).
@@ -28,7 +25,7 @@
   - CYRILLIC CAPITAL LETTER KOMI DJE (`U+0502`) ... CYRILLIC SMALL LETTER KOMI ZJE (`U+0505`).
   - CYRILLIC CAPITAL LETTER KOMI LJE (`U+0508`) ... CYRILLIC SMALL LETTER KOMI NJE (`U+050B`).
   - CYRILLIC CAPITAL LETTER YAE (`U+0518`) ... CYRILLIC SMALL LETTER YAE (`U+0519`).
-  - CYRILLIC CAPITAL LETTER WE (`U+051C`) ... CYRILLIC SMALL LETTER WE (`U+051D`).
+  - CYRILLIC CAPITAL LETTER WE (`U+051C`).
   - CYRILLIC CAPITAL LETTER EL WITH MIDDLE HOOK (`U+0520`) ... CYRILLIC SMALL LETTER EN WITH MIDDLE HOOK (`U+0523`).
   - CYRILLIC CAPITAL LETTER DZZHE (`U+052A`) ... CYRILLIC SMALL LETTER DZZHE (`U+052B`).
   - ARMENIAN CAPITAL LETTER XEH (`U+053D`).
@@ -53,8 +50,11 @@
   - LATIN SMALL LETTER M WITH ACUTE (`U+1E3F`).
   - LATIN SMALL LETTER M WITH DOT ABOVE (`U+1E41`).
   - LATIN SMALL LETTER M WITH DOT BELOW (`U+1E43`).
-  - LATIN CAPITAL LETTER W WITH GRAVE (`U+1E80`) ... LATIN SMALL LETTER W WITH DOT BELOW (`U+1E89`).
-  - LATIN SMALL LETTER W WITH RING ABOVE (`U+1E98`).
+  - LATIN CAPITAL LETTER W WITH GRAVE (`U+1E80`).
+  - LATIN CAPITAL LETTER W WITH ACUTE (`U+1E82`).
+  - LATIN CAPITAL LETTER W WITH DIAERESIS (`U+1E84`).
+  - LATIN CAPITAL LETTER W WITH DOT ABOVE (`U+1E86`).
+  - LATIN CAPITAL LETTER W WITH DOT BELOW (`U+1E88`).
   - LATIN SUBSCRIPT SMALL LETTER M (`U+2098`).
   - TELEPHONE SIGN (`U+2121`).
   - FACSIMILE SIGN (`U+213B`).
@@ -66,7 +66,7 @@
   - VERY MUCH LESS-THAN (`U+22D8`) ... VERY MUCH GREATER-THAN (`U+22D9`).
   - LEFT AND RIGHT DOUBLE TURNSTILE (`U+27DA`) ... LEFT AND RIGHT TACK (`U+27DB`).
   - SHUFFLE PRODUCT (`U+29E2`).
-  - LATIN CAPITAL LETTER W WITH HOOK (`U+2C72`) ... LATIN SMALL LETTER W WITH HOOK (`U+2C73`).
+  - LATIN CAPITAL LETTER W WITH HOOK (`U+2C72`).
   - CYRILLIC CAPITAL LETTER BROAD OMEGA (`U+A64C`).
   - CYRILLIC CAPITAL LETTER DOUBLE MONOCULAR O (`U+A66C`) ... CYRILLIC LETTER MULTIOCULAR O (`U+A66E`).
   - CYRILLIC CAPITAL LETTER ZHWE (`U+A684`) ... CYRILLIC SMALL LETTER CCHE (`U+A687`).
@@ -82,7 +82,6 @@
   - LATIN SMALL LETTER SAKHA YAT (`U+AB60`).
   - LATIN SMALL LETTER UO (`U+AB63`).
   - LATIN SMALL LETTER DZ DIGRAPH WITH RETROFLEX HOOK (`U+AB66`) ... LATIN SMALL LETTER TS DIGRAPH WITH RETROFLEX HOOK (`U+AB67`).
-  - MODIFIER LETTER TURNED W (`U+AB69`).
   - LATIN SMALL LIGATURE FFI (`U+FB03`) ... LATIN SMALL LIGATURE ST (`U+FB06`).
   - MODIFIER LETTER SMALL AE (`U+10783`).
   - LATIN SMALL LETTER DEZH DIGRAPH WITH PALATAL HOOK (`U+1DF12`).
