--- a/changes/32.3.0.md
+++ b/changes/32.3.0.md
@@ -91,6 +91,9 @@
   - CYRILLIC SUBSCRIPT SMALL LETTER EF (`U+1E060`).
   - CYRILLIC SUBSCRIPT SMALL LETTER SHA (`U+1E064`).
 * Add characters:
+  - MARRIAGE SYMBOL (`U+26AD`).
+  - DIVORCE SYMBOL (`U+26AE`).
+  - UNMARRIED PARTNERSHIP SYMBOL (`U+26AF`).
   - LEFT OUTER JOIN (`U+27D5`) ... FULL OUTER JOIN (`U+27D7`).
   - Z NOTATION LEFT BINDING BRACKET (`U+2989`).
   - Z NOTATION RIGHT BINDING BRACKET (`U+298A`).
@@ -111,5 +114,7 @@
   - CLOSED SUBSET (`U+2ACF`) ... CLOSED SUPERSET OR EQUAL TO (`U+2AD2`).
   - ANTICLOCKWISE TRIANGLE-HEADED RIGHT U-SHAPED ARROW (`U+2B8C`) ... FOUR CORNER ARROWS CIRCLING ANTICLOCKWISE (`U+2B94`).
   - DOWNWARDS TRIANGLE-HEADED ARROW WITH LONG TIP LEFTWARDS (`U+2BA0`) ... RIGHTWARDS TRIANGLE-HEADED ARROW WITH LONG TIP DOWNWARDS (`U+2BA7`).
+  - UNITED SYMBOL (`U+2BFA`) ... PASSED SYMBOL (`U+2BFD`).
+  - MUSICAL SYMBOL FLAT UP (`U+1D12C`) ... MUSICAL SYMBOL SHARP DOWN (`U+1D131`).
   - LATIN SMALL LETTER DEZH DIGRAPH WITH RETROFLEX HOOK (`U+1DF19`).
   - LATIN SMALL LETTER TESH DIGRAPH WITH RETROFLEX HOOK (`U+1DF1C`).
