Make schwa with retroflex hook slightly wider.
Also move `Autobuild-Rhotic` from `transformed.ptl` to `composite.ptl`.

--- a/changes/32.3.0.md
+++ b/changes/32.3.0.md
@@ -20,6 +20,7 @@
   - CYRILLIC SMALL LETTER LJE (`U+0459`) ... CYRILLIC SMALL LETTER NJE (`U+045A`).
   - CYRILLIC CAPITAL LETTER OMEGA (`U+0460`).
   - CYRILLIC CAPITAL LETTER OMEGA WITH TITLO (`U+047C`).
+  - CYRILLIC CAPITAL LETTER OT (`U+047E`).
   - CYRILLIC CAPITAL LETTER PE WITH MIDDLE HOOK (`U+04A6`) ... CYRILLIC SMALL LETTER PE WITH MIDDLE HOOK (`U+04A7`).
   - CYRILLIC CAPITAL LIGATURE A IE (`U+04D4`) ... CYRILLIC SMALL LIGATURE A IE (`U+04D5`).
   - CYRILLIC CAPITAL LETTER KOMI DJE (`U+0502`) ... CYRILLIC SMALL LETTER KOMI ZJE (`U+0505`).
@@ -46,6 +47,7 @@
   - LATIN SMALL LETTER UE (`U+1D6B`).
   - LATIN SMALL LETTER M WITH MIDDLE TILDE (`U+1D6F`).
   - LATIN SMALL LETTER M WITH PALATAL HOOK (`U+1D86`).
+  - LATIN SMALL LETTER SCHWA WITH RETROFLEX HOOK (`U+1D95`).
   - MODIFIER LETTER SMALL M WITH HOOK (`U+1DAC`) ... MODIFIER LETTER SMALL TURNED M WITH LONG LEG (`U+1DAD`).
   - LATIN SMALL LETTER M WITH ACUTE (`U+1E3F`).
   - LATIN SMALL LETTER M WITH DOT ABOVE (`U+1E41`).
@@ -91,9 +93,7 @@
   - CYRILLIC SUBSCRIPT SMALL LETTER EF (`U+1E060`).
   - CYRILLIC SUBSCRIPT SMALL LETTER SHA (`U+1E064`).
 * Add characters:
-  - MARRIAGE SYMBOL (`U+26AD`).
-  - DIVORCE SYMBOL (`U+26AE`).
-  - UNMARRIED PARTNERSHIP SYMBOL (`U+26AF`).
+  - MARRIAGE SYMBOL (`U+26AD`) ... UNMARRIED PARTNERSHIP SYMBOL (`U+26AF`).
   - LEFT OUTER JOIN (`U+27D5`) ... FULL OUTER JOIN (`U+27D7`).
   - Z NOTATION LEFT BINDING BRACKET (`U+2989`).
   - Z NOTATION RIGHT BINDING BRACKET (`U+298A`).
