--- a/changes/32.3.0.md
+++ b/changes/32.3.0.md
@@ -1,3 +1,4 @@
+* Make Cyrillic Capital/Small Letter Yn (U+A65E‥U+A65F) to follow Greek Capital Lambda (cv72) instead of V/v. (#2539)
 * Make certain M-width characters slightly wider under Quasi-Proportional. Affected characters:
   - LATIN CAPITAL LETTER W (`U+0057`).
   - LATIN SMALL LETTER M (`U+006D`).
