--- a/changes/32.3.1.md
+++ b/changes/32.3.1.md
@@ -5,3 +5,11 @@
   - LATIN SMALL LETTER HALF H (`U+2C76`).
   - LATIN CAPITAL LETTER REVERSED HALF H (`U+A7F5`).
   - LATIN SMALL LETTER REVERSED HALF H (`U+A7F6`).
+* Fix shape of `U+276E` and `U+276E` (#2603).
+* Add characters:
+  - OPEN CENTRE CROSS (`U+271B`).
+  - HEAVY OPEN CENTRE CROSS (`U+271C`).
+  - MALTESE CROSS (`U+2720`).
+  - FOUR TEARDROP-SPOKED ASTERISK (`U+2722`) ... FOUR CLUB-SPOKED ASTERISK (`U+2725`).
+  - OPEN CENTRE ASTERISK (`U+2732`).
+  - TEARDROP-SPOKED ASTERISK (`U+273B`) ... HEAVY EIGHT TEARDROP-SPOKED PROPELLER ASTERISK (`U+274B`).
