Improve serifs of Bulgarian Cyrillic Lower Zhe.

--- a/changes/32.3.1.md
+++ b/changes/32.3.1.md
@@ -6,6 +6,7 @@
   - LATIN CAPITAL LETTER REVERSED HALF H (`U+A7F5`).
   - LATIN SMALL LETTER REVERSED HALF H (`U+A7F6`).
 * Fix shape of `U+276E` and `U+276E` (#2603).
+* Improve serifs of Bulgarian Cyrillic Lower Zhe (`ж`).
 * Add characters:
   - OPEN CENTRE CROSS (`U+271B`).
   - HEAVY OPEN CENTRE CROSS (`U+271C`).
