Make `scriptCut` variants for `a`/`b`/`g`/`q` selectable via CV.

--- a/changes/32.3.2.md
+++ b/changes/32.3.2.md
@@ -1,3 +1,5 @@
 * Add `curved` variant for `¶` (#2045).
+* Add `top-cut` variants for `a`/`g`/`q`.
+* Add `bottom-cut` variants for `b`.
 * Add characters:
 	- CURVED STEM PARAGRAPH SIGN ORNAMENT (`U+2761`).
