--- a/changes/32.4.0.md
+++ b/changes/32.4.0.md
@@ -1,5 +1,8 @@
 * Add `curved` variant for `¶` (#2045).
 * Add `top-cut` variants for `a`/`g`/`q`.
 * Add `bottom-cut` variants for `b`.
+Make certain characters slightly wider under Quasi-Proportional. Affected characters:
+  - LATIN SMALL LETTER SCHWA WITH HOOK (`U+025A`).
+  - LATIN SMALL LETTER REVERSED OPEN E WITH HOOK (`U+025D`).
 * Add characters:
-	- CURVED STEM PARAGRAPH SIGN ORNAMENT (`U+2761`).
+  - CURVED STEM PARAGRAPH SIGN ORNAMENT (`U+2761`).
