Add new spacing option `wide-mosaic` for custom build (#2637).

--- a/changes/32.4.0.md
+++ b/changes/32.4.0.md
@@ -13,3 +13,4 @@
   - VIEWDATA SQUARE (`U+2317`).
   - PLACE OF INTEREST SIGN (`U+2318`).
   - CURVED STEM PARAGRAPH SIGN ORNAMENT (`U+2761`).
+* Add new spacing option `wide-mosaic` for custom build (#2637).
