Make `ɶ`/`ᴁ`/`ᴡ`/`℡`/`℻` slightly wider under Quasi-Proportional.

--- a/changes/32.4.0.md
+++ b/changes/32.4.0.md
@@ -5,6 +5,13 @@
 * Make certain characters slightly wider under Quasi-Proportional. Affected characters:
   - LATIN SMALL LETTER SCHWA WITH HOOK (`U+025A`).
   - LATIN SMALL LETTER REVERSED OPEN E WITH HOOK (`U+025D`).
+  - LATIN LETTER SMALL CAPITAL OE (`U+0276`).
+  - LATIN LETTER SMALL CAPITAL AE (`U+1D01`).
+  - LATIN LETTER SMALL CAPITAL W (`U+1D21`).
+  - TELEPHONE SIGN (`U+2121`).
+  - FACSIMILE SIGN (`U+213B`).
+  - MODIFIER LETTER SMALL CAPITAL AA (`U+01780`).
+  - MODIFIER LETTER SMALL CAPITAL OE (`U+107A3`).
 * Add characters:
   - NEW SHEQEL SIGN (`U+20AA`) (#2097).
   - TURKISH LIRA SIGN (`U+20BA`) (#2097).
