--- a/changes/32.5.0.md
+++ b/changes/32.5.0.md
@@ -1,1 +1,2 @@
 * Add variant selector for decorative angle brackets (U+276C...U+2771) (#2603, #2623).
+* Optimize metrics for bowl of Cyrillic Lower Ef (`ф`) and Greek Small Letter Phi Symbol (`ϕ`).
