--- a/changes/32.5.0.md
+++ b/changes/32.5.0.md
@@ -1,2 +1,12 @@
 * Add variant selector for decorative angle brackets (U+276C...U+2771) (#2603, #2623).
+* Refine shape of:
+  - ARMENIAN SMALL LETTER CA (`U+056E`).
+  - VERTICAL ZIGZAG LINE (`U+299A`).
+  - LEFT WIGGLY FENCE (`U+29D8`).
+  - RIGHT WIGGLY FENCE (`U+29D9`).
+  - LEFT DOUBLE WIGGLY FENCE (`U+29DA`).
+  - RIGHT DOUBLE WIGGLY FENCE (`U+29DB`).
+  - HORIZONTAL RESISTOR SEGMENT (`U+1CC09`).
+  - VERTICAL RESISTOR SEGMENT (`U+1CC0A`).
+  - HORIZONTAL ZIGZAG LINE (`U+1CEB0`).
 * Optimize metrics for bowl of Cyrillic Lower Ef (`ф`) and Greek Small Letter Phi Symbol (`ϕ`).
