Add italic form for `cyrl/ge`.

--- a/changes/32.5.0.md
+++ b/changes/32.5.0.md
@@ -10,3 +10,4 @@
   - VERTICAL RESISTOR SEGMENT (`U+1CC0A`).
   - HORIZONTAL ZIGZAG LINE (`U+1CEB0`).
 * Optimize metrics for bowl of Cyrillic Lower Ef (`ф`) and Greek Small Letter Phi Symbol (`ϕ`).
+* Add italic form for Cyrillic Small Letter Ghe with Upturn (`ґ`).
