--- a/changes/32.5.0.md
+++ b/changes/32.5.0.md
@@ -11,3 +11,17 @@
   - HORIZONTAL ZIGZAG LINE (`U+1CEB0`).
 * Optimize metrics for bowl of Cyrillic Lower Ef (`ф`) and Greek Small Letter Phi Symbol (`ϕ`).
 * Add italic form for Cyrillic Small Letter Ghe with Upturn (`ґ`).
+* Add characters:
+  - ELECTRIC ARROW (`U+2301`).
+  - UP ARROWHEAD (`U+2303`).
+  - DOWN ARROWHEAD (`U+2304`).
+  - POSITION INDICATOR (`U+2316`).
+  - UP ARROWHEAD BETWEEN TWO HORIZONTAL BARS (`U+2324`).
+  - OPTION KEY (`U+2325`).
+  - CYLINDRICITY (`U+232D`).
+  - ALL AROUND-PROFILE (`U+232E`).
+  - TOTAL RUNOUT (`U+2330`).
+  - DIMENSION ORIGIN (`U+2331`).
+  - ENTER SYMBOL (`U+2386`).
+  - ALTERNATIVE KEY SYMBOL (`U+2387`).
+  - SQUARE POSITION INDICATOR (`U+2BD0`).
