Descriptions of stylistic sets are added to font files (#2664).

--- a/changes/32.5.0.md
+++ b/changes/32.5.0.md
@@ -25,3 +25,4 @@
   - ENTER SYMBOL (`U+2386`).
   - ALTERNATIVE KEY SYMBOL (`U+2387`).
   - SQUARE POSITION INDICATOR (`U+2BD0`).
+ * Descriptions of stylistic sets are added to font files (#2664).
