Improve glyphs for Armenian Capital/Lower K'eh.

--- a/changes/32.5.0.md
+++ b/changes/32.5.0.md
@@ -1,6 +1,10 @@
 * Add variant selector for decorative angle brackets (U+276C...U+2771) (#2603, #2623).
-* Refine shape of:
+* Optimize glyphs for the following characters:
+  - GREEK PHI SYMBOL (`U+03D5`).
+  - CYRILLIC SMALL LETTER EF (`U+0444`).
+  - ARMENIAN CAPITAL LETTER KEH (`U+0554`).
   - ARMENIAN SMALL LETTER CA (`U+056E`).
+  - ARMENIAN SMALL LETTER KEH (`U+0584`).
   - VERTICAL ZIGZAG LINE (`U+299A`).
   - LEFT WIGGLY FENCE (`U+29D8`).
   - RIGHT WIGGLY FENCE (`U+29D9`).
@@ -9,7 +13,6 @@
   - HORIZONTAL RESISTOR SEGMENT (`U+1CC09`).
   - VERTICAL RESISTOR SEGMENT (`U+1CC0A`).
   - HORIZONTAL ZIGZAG LINE (`U+1CEB0`).
-* Optimize metrics for bowl of Cyrillic Lower Ef (`ф`) and Greek Small Letter Phi Symbol (`ϕ`).
 * Add italic form for Cyrillic Small Letter Ghe with Upturn (`ґ`).
 * Add characters:
   - ELECTRIC ARROW (`U+2301`).
