--- a/changes/32.5.1.md
+++ b/changes/32.5.1.md
@@ -1,4 +1,6 @@
 * Refine shape of the following characters:
+  - CYRILLIC CAPITAL LETTER KOMI DJE (`U+0502`) ... CYRILLIC SMALL LETTER KOMI ZJE (`U+0505`).
+  - CYRILLIC CAPITAL LETTER KOMI LJE (`U+0508`) ... CYRILLIC SMALL LETTER KOMI TJE (`U+050F`).
   - ARMENIAN CAPITAL LETTER XEH (`U+053D`).
   - ARMENIAN CAPITAL LETTER CA (`U+053E`).
   - ARMENIAN CAPITAL LETTER HO (`U+0540`).
