--- a/changes/32.5.1.md
+++ b/changes/32.5.1.md
@@ -1,6 +1,8 @@
 * Refine shape of the following characters:
+  - CYRILLIC CAPITAL LETTER SHHA (`U+04BA`).
   - CYRILLIC CAPITAL LETTER KOMI DJE (`U+0502`) ... CYRILLIC SMALL LETTER KOMI ZJE (`U+0505`).
   - CYRILLIC CAPITAL LETTER KOMI LJE (`U+0508`) ... CYRILLIC SMALL LETTER KOMI TJE (`U+050F`).
+  - CYRILLIC CAPITAL LETTER SHHA WITH DESCENDER (`U+0526`).
   - ARMENIAN CAPITAL LETTER XEH (`U+053D`).
   - ARMENIAN CAPITAL LETTER CA (`U+053E`).
   - ARMENIAN CAPITAL LETTER HO (`U+0540`).
@@ -13,3 +15,4 @@
   - ARMENIAN SMALL LETTER PIWR (`U+0583`).
   - ARMENIAN SMALL LETTER FEH (`U+0586`).
   - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
+  - CYRILLIC CAPITAL LETTER HWE (`U+A694`).
