change space width to 7/12, update release notes

--- a/changes/32.6.0.md
+++ b/changes/32.6.0.md
@@ -16,3 +16,6 @@
   - ARMENIAN SMALL LETTER FEH (`U+0586`).
   - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
   - CYRILLIC CAPITAL LETTER HWE (`U+A694`).
+* Adjusted width of spaces in quasi-porportional
+  - Slightly narrower by default
+  - Adjustable via metric override
