Mark the advanceScaleSp changes as breaking.

--- a/changes/33.0.0.md
+++ b/changes/33.0.0.md
@@ -1,3 +1,7 @@
+* \[**Breaking**\] Adjusted width of spaces in quasi-porportional
+  - Slightly narrower by default
+  - Adjustable via metric override
+* \[**Breaking**\] Reordered variants for `W`, `a`, `b`, `g`, `q`, `w`, `α`, Cyrillic `а`, Cyrillic `ф`, and `$`.
 * Refine shape of the following characters:
   - CYRILLIC CAPITAL LETTER SHHA (`U+04BA`).
   - CYRILLIC CAPITAL LETTER KOMI DJE (`U+0502`) ... CYRILLIC SMALL LETTER KOMI ZJE (`U+0505`).
@@ -16,6 +20,3 @@
   - ARMENIAN SMALL LETTER FEH (`U+0586`).
   - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
   - CYRILLIC CAPITAL LETTER HWE (`U+A694`).
-* Adjusted width of spaces in quasi-porportional
-  - Slightly narrower by default
-  - Adjustable via metric override
