Refine shape of capital/lower Half H.

--- a/changes/33.0.0.md
+++ b/changes/33.0.0.md
@@ -3,6 +3,8 @@
   - Adjustable via metric override
 * \[**Breaking**\] Reordered variants for `W`, `a`, `b`, `g`, `q`, `w`, `α`, Cyrillic `а`, Cyrillic `ф`, and `$`.
 * Refine shape of the following characters:
+  - GREEK CAPITAL LETTER HETA (`U+0370`).
+  - GREEK SMALL LETTER HETA (`U+0371`).
   - CYRILLIC CAPITAL LETTER SHHA (`U+04BA`).
   - CYRILLIC CAPITAL LETTER KOMI DJE (`U+0502`) ... CYRILLIC SMALL LETTER KOMI ZJE (`U+0505`).
   - CYRILLIC CAPITAL LETTER KOMI LJE (`U+0508`) ... CYRILLIC SMALL LETTER KOMI TJE (`U+050F`).
@@ -19,4 +21,8 @@
   - ARMENIAN SMALL LETTER PIWR (`U+0583`).
   - ARMENIAN SMALL LETTER FEH (`U+0586`).
   - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
+  - LATIN CAPITAL LETTER HALF H (`U+2C75`).
+  - LATIN SMALL LETTER HALF H (`U+2C76`).
   - CYRILLIC CAPITAL LETTER HWE (`U+A694`).
+  - LATIN CAPITAL LETTER REVERSED HALF H (`U+A7F5`).
+  - LATIN SMALL LETTER REVERSED HALF H (`U+A7F6`).
