Harmonize metrics of `Է`/`Լ`/`է`/`ւ`.

--- a/changes/33.0.0.md
+++ b/changes/33.0.0.md
@@ -9,11 +9,13 @@
   - CYRILLIC CAPITAL LETTER KOMI DJE (`U+0502`) ... CYRILLIC SMALL LETTER KOMI ZJE (`U+0505`).
   - CYRILLIC CAPITAL LETTER KOMI LJE (`U+0508`) ... CYRILLIC SMALL LETTER KOMI TJE (`U+050F`).
   - CYRILLIC CAPITAL LETTER SHHA WITH DESCENDER (`U+0526`).
+  - ARMENIAN CAPITAL LETTER EH (`U+0537`).
   - ARMENIAN CAPITAL LETTER XEH (`U+053D`).
   - ARMENIAN CAPITAL LETTER CA (`U+053E`).
   - ARMENIAN CAPITAL LETTER HO (`U+0540`).
   - ARMENIAN CAPITAL LETTER CO (`U+0551`).
   - ARMENIAN CAPITAL LETTER FEH (`U+0556`).
+  - ARMENIAN SMALL LETTER EH (`U+0567`).
   - ARMENIAN SMALL LETTER ZHE (`U+056A`).
   - ARMENIAN SMALL LETTER XEH (`U+056D`).
   - ARMENIAN SMALL LETTER CHA (`U+0579`).
