Harmonize glyphs of `Ի`/`Կ`/`Վ`.

--- a/changes/33.0.0.md
+++ b/changes/33.0.0.md
@@ -10,6 +10,7 @@
   - CYRILLIC CAPITAL LETTER KOMI LJE (`U+0508`) ... CYRILLIC SMALL LETTER KOMI TJE (`U+050F`).
   - CYRILLIC CAPITAL LETTER SHHA WITH DESCENDER (`U+0526`).
   - ARMENIAN CAPITAL LETTER EH (`U+0537`).
+  - ARMENIAN CAPITAL LETTER INI (`U+053B`).
   - ARMENIAN CAPITAL LETTER XEH (`U+053D`).
   - ARMENIAN CAPITAL LETTER CA (`U+053E`).
   - ARMENIAN CAPITAL LETTER HO (`U+0540`).
