Optimize glyphs of `բ`/`ե`/`և`.

--- a/changes/33.0.0.md
+++ b/changes/33.0.0.md
@@ -16,6 +16,8 @@
   - ARMENIAN CAPITAL LETTER HO (`U+0540`).
   - ARMENIAN CAPITAL LETTER CO (`U+0551`).
   - ARMENIAN CAPITAL LETTER FEH (`U+0556`).
+  - ARMENIAN SMALL LETTER BEN (`U+0562`).
+  - ARMENIAN SMALL LETTER ECH (`U+0565`).
   - ARMENIAN SMALL LETTER EH (`U+0567`).
   - ARMENIAN SMALL LETTER ZHE (`U+056A`).
   - ARMENIAN SMALL LETTER XEH (`U+056D`).
