Make f ligatures slightly wider under QP.

--- a/changes/33.0.0.md
+++ b/changes/33.0.0.md
@@ -31,3 +31,5 @@
   - CYRILLIC CAPITAL LETTER HWE (`U+A694`).
   - LATIN CAPITAL LETTER REVERSED HALF H (`U+A7F5`).
   - LATIN SMALL LETTER REVERSED HALF H (`U+A7F6`).
+* Make certain characters slightly wider under Quasi-Proportional. Affected characters:
+  - LATIN SMALL LIGATURE FF (`U+FB00`) ... LATIN SMALL LIGATURE FFL (`U+FB04`).
