Add Latin Lower Script r.

--- a/changes/33.0.0.md
+++ b/changes/33.0.0.md
@@ -33,3 +33,6 @@
   - LATIN SMALL LETTER REVERSED HALF H (`U+A7F6`).
 * Make certain characters slightly wider under Quasi-Proportional. Affected characters:
   - LATIN SMALL LIGATURE FF (`U+FB00`) ... LATIN SMALL LIGATURE FFL (`U+FB04`).
+* Add Characters:
+  - LATIN SMALL LETTER SCRIPT R (`U+AB4B`).
+  - LATIN SMALL LETTER SCRIPT R WITH RING (`U+AB4C`).
