Add symmetric/asymmetric variants for Capital Thorn.

--- a/changes/33.0.0.md
+++ b/changes/33.0.0.md
@@ -2,6 +2,7 @@
   - Slightly narrower by default
   - Adjustable via metric override
 * \[**Breaking**\] Reordered variants for `W`, `a`, `b`, `g`, `q`, `w`, `α`, Cyrillic `а`, Cyrillic `ф`, and `$`.
+* \[**Breaking**\] Add variants for Capital Thorn (`Þ`) with symmetric/asymmetric bowl position.
 * Refine shape of the following characters:
   - GREEK CAPITAL LETTER HETA (`U+0370`).
   - GREEK SMALL LETTER HETA (`U+0371`).
