--- a/changes/33.0.0.md
+++ b/changes/33.0.0.md
@@ -35,5 +35,11 @@
 * Make certain characters slightly wider under Quasi-Proportional. Affected characters:
   - LATIN SMALL LIGATURE FF (`U+FB00`) ... LATIN SMALL LIGATURE FFL (`U+FB04`).
 * Add Characters:
+  - OBSERVER EYE SYMBOL (`U+23FF`).
   - LATIN SMALL LETTER SCRIPT R (`U+AB4B`).
   - LATIN SMALL LETTER SCRIPT R WITH RING (`U+AB4C`).
+  - KEYHOLE (`U+1CEB1`). 
+  - BLACK RIGHT TRIANGLE CARET (`U+1CEB3`). 
+  - RIGHTWARDS ARROW WITH LOWER HOOK (`U+1F8B2`). 
+  - LEFTWARDS ARROW FROM DOWNWARDS ARROW (`U+1F8C0`). 
+  - RIGHTWARDS ARROW FROM DOWNWARDS ARROW (`U+1F8C1`).
