--- a/changes/33.0.0.md
+++ b/changes/33.0.0.md
@@ -3,6 +3,9 @@
   - Adjustable via metric override
 * \[**Breaking**\] Reordered variants for `W`, `a`, `b`, `g`, `q`, `w`, `α`, Cyrillic `а`, Cyrillic `ф`, and `$`.
 * \[**Breaking**\] Add variants for Capital Thorn (`Þ`) with symmetric/asymmetric bowl position.
+* \[**Breaking**\] Add variant selector for Greek Lower Theta (#2630).
+  - As a result, feature tags for `cv71` ... `cv99`, `VAAA` are shifted by one place to `cv72` ... `cv99`, `VSAA`, `VSAB`.
+* Add `closed-contour` variant for Partial derivative symbol (#2148).
 * Refine shape of the following characters:
   - GREEK CAPITAL LETTER HETA (`U+0370`).
   - GREEK SMALL LETTER HETA (`U+0371`).
