--- a/changes/33.0.0.md
+++ b/changes/33.0.0.md
@@ -37,6 +37,7 @@
   - LATIN CAPITAL LETTER REVERSED HALF H (`U+A7F5`).
   - LATIN SMALL LETTER REVERSED HALF H (`U+A7F6`).
 * Make certain characters slightly wider under Quasi-Proportional. Affected characters:
+  - CYRILLIC CAPITAL LETTER UK (`U+0478`).
   - LATIN SMALL LIGATURE FF (`U+FB00`) ... LATIN SMALL LIGATURE FFL (`U+FB04`).
 * Add Characters:
   - OBSERVER EYE SYMBOL (`U+23FF`).
