--- a/changes/33.0.0.md
+++ b/changes/33.0.0.md
@@ -5,6 +5,7 @@
 * \[**Breaking**\] Add variants for Capital Thorn (`Þ`) with symmetric/asymmetric bowl position.
 * \[**Breaking**\] Add variant selector for Greek Lower Theta (#2630).
   - As a result, character variant feature tags are reordered.
+* Add almost-flat-top variant for `W` and `w` (#2693).
 * Add `closed-contour` variant for Partial derivative symbol (#2148).
 * Refine shape of the following characters:
   - GREEK CAPITAL LETTER HETA (`U+0370`).
