Make Latin Lower Th with Strikethrough slightly wider under QP.

--- a/changes/33.0.0.md
+++ b/changes/33.0.0.md
@@ -39,6 +39,7 @@
   - LATIN SMALL LETTER REVERSED HALF H (`U+A7F6`).
 * Make certain characters slightly wider under Quasi-Proportional. Affected characters:
   - CYRILLIC CAPITAL LETTER UK (`U+0478`).
+  - LATIN SMALL LETTER TH WITH STRIKETHROUGH (`U+1D7A`).
   - LATIN SMALL LIGATURE FF (`U+FB00`) ... LATIN SMALL LIGATURE FFL (`U+FB04`).
 * Add Characters:
   - OBSERVER EYE SYMBOL (`U+23FF`).
