--- a/changes/33.1.0.md
+++ b/changes/33.1.0.md
@@ -1,1 +1,2 @@
 * Add full-serifed variants for `K` and `k`, and related letters (#2696).
+* Add IPA localization form for Latin Lower G with Stroke (`ǥ`).
