--- a/changes/33.1.0.md
+++ b/changes/33.1.0.md
@@ -1,3 +1,3 @@
 * Add full-serifed variants for `K` and `k`, and related letters (#2696).
-* Add cursive variants for Greek Lower Theta (`θ`).
+* Add cursive variant for Greek Lower Theta (`θ`).
 * Add IPA localization form for Latin Lower G with Stroke (`ǥ`).
