Add `top-right-serifed` variants for Lower Kappa.

--- a/changes/33.1.0.md
+++ b/changes/33.1.0.md
@@ -1,4 +1,5 @@
-* Add `full-serifed` and `tri-serifed` variants for `K` and `k`, and related letters (#2696).
+* Add `full-serifed` variants for `K` and `k`, and related letters (#2696).
+* Add `top-right-serifed` and `tri-serifed` variants for `K` and `k`, and related letters.
 * Add `cursive` variant for Greek Lower Theta (`θ`).
 * Add IPA localization form for Latin Lower G with Stroke (`ǥ`).
 * Add variant selectors for Greek Lower Eta (`η`) and Kappa (`κ`).
