--- a/changes/33.1.1.md
+++ b/changes/33.1.1.md
@@ -1,2 +1,3 @@
 * Refine shape of the following characters:
+  - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
   - LATIN CAPITAL LETTER AU (`U+A736`).
