--- a/changes/33.1.1.md
+++ b/changes/33.1.1.md
@@ -1,3 +1,4 @@
 * Refine shape of the following characters:
   - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
   - LATIN CAPITAL LETTER AU (`U+A736`).
+  - LATIN SMALL LIGATURE FFI (`U+FB03`).
