--- a/changes/33.1.1.md
+++ b/changes/33.1.1.md
@@ -2,3 +2,4 @@
   - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
   - LATIN CAPITAL LETTER AU (`U+A736`).
   - LATIN SMALL LIGATURE FFI (`U+FB03`).
+* Fix variant application of `cv38` on `U+1DF0F`.
