--- a/changes/33.1.0.md
+++ b/changes/33.1.0.md
@@ -1,7 +1,7 @@
 * Add `full-serifed` variants for `K` and `k`, and related letters (#2696).
 * Add `top-right-serifed` and `tri-serifed` variants for `K` and `k`, and related letters.
 * Add `cursive` variant for Greek Lower Theta (`θ`).
-* Add `closed-swash' variant for `Q` (#2392).
+* Add `closed-swash` variant for `Q` (#2392).
 * Add IPA localization form for Latin Lower `a` and `g`.
 * Add IPA localization form for Latin Lower G with Stroke (`ǥ`) (#2632).
 * Add variant selectors for Greek Lower Eta (`η`) and Kappa (`κ`).
