--- a/changes/33.2.0.md
+++ b/changes/33.2.0.md
@@ -1,3 +1,4 @@
+* Add `flat-top` variants for `curly`, `straight-vertical-sides` and `rounded-vertical-sides` forms of `W` and `w` (#2146).
 * Refine shape of the following characters:
   - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
   - LATIN CAPITAL LETTER AU (`U+A736`).
