--- a/changes/33.2.0.md
+++ b/changes/33.2.0.md
@@ -1,4 +1,5 @@
-* Add `flat-top` variants for `curly`, `straight-vertical-sides` and `rounded-vertical-sides` forms of `W` and `w` (#2146).
+* Add `flat-top` variants for `curly`, `straight-vertical-sides`, and `rounded-vertical-sides` forms of `W` and `w` (#2146).
+* Add `almost-flat-top` variants for `curly` forms of `W` and `w`.
 * Refine shape of the following characters:
   - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
   - LATIN CAPITAL LETTER AU (`U+A736`).
