Make `w` use `flat-top-serifless`/`almost-flat-top-serifed` by default.

--- a/changes/33.2.0.md
+++ b/changes/33.2.0.md
@@ -1,5 +1,8 @@
 * Add `flat-top` variants for `curly`, `straight-vertical-sides`, and `rounded-vertical-sides` forms of `W` and `w` (#2146).
 * Add `almost-flat-top` variants for `curly` forms of `W` and `w`.
+* Make `w` use `straight-flat-top-serifless` under Sans by default.
+* Make `w` use `straight-almost-flat-top-serifed` under Slab Upright and `cursive-serifed` under Slab Italic by default.
+* Make `v` use `cursive-serifed` under Slab Italic by default.
 * Refine shape of the following characters:
   - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
   - LATIN CAPITAL LETTER AU (`U+A736`).
