--- a/changes/33.2.0.md
+++ b/changes/33.2.0.md
@@ -1,7 +1,13 @@
 * Add `flat-top` variants for `curly`, `straight-vertical-sides`, and `rounded-vertical-sides` forms of `W` and `w` (#2146).
 * Add `almost-flat-top` variants for `curly` forms of `W` and `w`.
 * Refine shape of the following characters:
+  - GREEK CAPITAL LETTER HETA (`U+0370`).
+  - GREEK SMALL LETTER HETA (`U+0371`).
   - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
+  - LATIN CAPITAL LETTER HALF H (`U+2C75`).
+  - LATIN SMALL LETTER HALF H (`U+2C76`).
   - LATIN CAPITAL LETTER AU (`U+A736`).
+  - LATIN CAPITAL LETTER REVERSED HALF H (`U+A7F5`).
+  - LATIN SMALL LETTER REVERSED HALF H (`U+A7F6`).
   - LATIN SMALL LIGATURE FFI (`U+FB03`).
 * Fix variant application of `cv38` on `U+1DF0F`.
