--- a/changes/33.2.0.md
+++ b/changes/33.2.0.md
@@ -3,11 +3,14 @@
 * Refine shape of the following characters:
   - GREEK CAPITAL LETTER HETA (`U+0370`).
   - GREEK SMALL LETTER HETA (`U+0371`).
-  - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
   - LATIN CAPITAL LETTER HALF H (`U+2C75`).
   - LATIN SMALL LETTER HALF H (`U+2C76`).
   - LATIN CAPITAL LETTER AU (`U+A736`).
   - LATIN CAPITAL LETTER REVERSED HALF H (`U+A7F5`).
   - LATIN SMALL LETTER REVERSED HALF H (`U+A7F6`).
   - LATIN SMALL LIGATURE FFI (`U+FB03`).
+* Make certain characters slightly wider under Quasi-Proportional. Affected characters:
+  - ARMENIAN CAPITAL LETTER TO (`U+0539`).
+  - ARMENIAN SMALL LETTER TO (`U+0569`).
+  - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
 * Fix variant application of `cv38` on `U+1DF0F`.
