Optimize glyphs for Iotified A, Closed Little Yus.

--- a/changes/33.2.2.md
+++ b/changes/33.2.2.md
@@ -4,6 +4,9 @@
   - CYRILLIC CAPITAL LETTER KOMI DZJE (`U+0506`).
   - CYRILLIC SMALL LETTER KOMI DZJE (`U+0507`).
   - THERE DOES NOT EXIST (`U+2204`).
+  - CYRILLIC CAPITAL LETTER IOTIFIED A (`U+A656`).
+  - CYRILLIC CAPITAL LETTER IOTIFIED CLOSED LITTLE YUS (`U+A65C`).
+  - CYRILLIC SMALL LETTER IOTIFIED CLOSED LITTLE YUS (`U+A65D`).
   - LATIN CAPITAL LETTER VOLAPUK UE (`U+A79E`).
   - LATIN SMALL LETTER VOLAPUK UE (`U+A79F`).
   - MODIFIER LETTER SMALL CAPITAL G WITH HOOK (`U+10794`).
