Add Musical Symbol Fermata.

--- a/changes/33.2.2.md
+++ b/changes/33.2.2.md
@@ -11,3 +11,6 @@
   - LATIN SMALL LETTER VOLAPUK UE (`U+A79F`).
   - MODIFIER LETTER SMALL CAPITAL G WITH HOOK (`U+10794`).
   - MUSICAL SYMBOL DOUBLE SHARP (`U+1D12A`).
+* Add Characters:
+  - MUSICAL SYMBOL FERMATA (`U+1D110`).
+  - MUSICAL SYMBOL FERMATA BELOW (`U+1D111`).
