--- a/changes/33.2.3.md
+++ b/changes/33.2.3.md
@@ -3,3 +3,5 @@
   - TRIANGLE-HEADED RIGHTWARDS ARROW (`U+279D`).
   - HEAVY TRIANGLE-HEADED RIGHTWARDS ARROW (`U+279E`).
   - MATHEMATICAL DOUBLE-STRUCK CAPITAL B (`U+1D539`).
+* Add Characters:
+  - LEFTWARDS DOUBLE DASH ARROW (`U+290C`) ... RIGHTWARDS TRIPLE DASH ARROW (`U+290F`).
