--- a/changes/33.2.3.md
+++ b/changes/33.2.3.md
@@ -2,6 +2,7 @@
   - INFORMATION SOURCE (`U+2139`).
   - TRIANGLE-HEADED RIGHTWARDS ARROW (`U+279D`).
   - HEAVY TRIANGLE-HEADED RIGHTWARDS ARROW (`U+279E`).
+  - DASH WITH UPTURN (`U+2E43`).
   - MATHEMATICAL DOUBLE-STRUCK CAPITAL B (`U+1D539`).
 * Add Characters:
   - LEFTWARDS DOUBLE DASH ARROW (`U+290C`) ... RIGHTWARDS TRIPLE DASH ARROW (`U+290F`).
