--- a/changes/33.2.3.md
+++ b/changes/33.2.3.md
@@ -1,4 +1,5 @@
 * Refine shape of the following characters:
+  - ARMENIAN SMALL LETTER CHA (`U+0579`).
   - INFORMATION SOURCE (`U+2139`).
   - TRIANGLE-HEADED RIGHTWARDS ARROW (`U+279D`).
   - HEAVY TRIANGLE-HEADED RIGHTWARDS ARROW (`U+279E`).
