Refine glyph shape of Latin Lower Script R with Ring (`U+AB4C`).

--- a/changes/33.2.3.md
+++ b/changes/33.2.3.md
@@ -4,6 +4,7 @@
   - TRIANGLE-HEADED RIGHTWARDS ARROW (`U+279D`).
   - HEAVY TRIANGLE-HEADED RIGHTWARDS ARROW (`U+279E`).
   - DASH WITH UPTURN (`U+2E43`).
+  - LATIN SMALL LETTER SCRIPT R WITH RING (`U+AB4C`).
   - MATHEMATICAL DOUBLE-STRUCK CAPITAL B (`U+1D539`).
 * Add Characters:
   - LEFTWARDS DOUBLE DASH ARROW (`U+290C`) ... RIGHTWARDS TRIPLE DASH ARROW (`U+290F`).
