Refine glyph shapes of three currency symbols.

--- a/changes/33.2.4.md
+++ b/changes/33.2.4.md
@@ -1,2 +1,5 @@
 * Refine shape of the following characters:
+  - TENGE SIGN (`U+20B8`).
+  - TURKISH LIRA SIGN (`U+20BA`).
+  - MANAT SIGN (`U+20BC`).
   - LATIN CAPITAL LETTER LAMBDA WITH STROKE (`U+A7DC`).
