Optimize overshoot of Script R and Cyrillic Tall Te.

--- a/changes/33.2.4.md
+++ b/changes/33.2.4.md
@@ -1,5 +1,8 @@
 * Refine shape of the following characters:
+  - CYRILLIC SMALL LETTER TALL TE (`U+1C84`).
   - TENGE SIGN (`U+20B8`).
   - TURKISH LIRA SIGN (`U+20BA`).
   - MANAT SIGN (`U+20BC`).
   - LATIN CAPITAL LETTER LAMBDA WITH STROKE (`U+A7DC`).
+  - LATIN SMALL LETTER SCRIPT R (`U+AB4B`).
+  - LATIN SMALL LETTER SCRIPT R WITH RING (`U+AB4C`).
