Unify horizontal overshoots of top bars of Upper Gamma-like letters. (#2779)
* Optimize overshoot of Script R and Cyrillic Tall Te.

* Optimize overshoot of Greek Upper Gamma.

--- a/changes/33.2.4.md
+++ b/changes/33.2.4.md
@@ -1,5 +1,17 @@
 * Refine shape of the following characters:
+  - GREEK CAPITAL LETTER GAMMA (`U+0393`).
+  - GREEK LETTER DIGAMMA (`U+03DC`) ... GREEK SMALL LETTER DIGAMMA (`U+03DD`).
+  - CYRILLIC CAPITAL LETTER GHE (`U+0413`).
+  - CYRILLIC SMALL LETTER GHE (`U+0433`).
+  - CYRILLIC CAPITAL LETTER GHE WITH UPTURN (`U+0490`) ... CYRILLIC SMALL LETTER GHE WITH MIDDLE HOOK (`U+0495`).
+  - CYRILLIC CAPITAL LETTER GHE WITH DESCENDER (`U+04F6`) ... CYRILLIC SMALL LETTER GHE WITH DESCENDER (`U+04F7`).
+  - CYRILLIC CAPITAL LETTER GHE WITH STROKE AND HOOK (`U+04FA`) ... CYRILLIC SMALL LETTER GHE WITH STROKE AND HOOK (`U+04FB`).
+  - CYRILLIC SMALL LETTER TALL TE (`U+1C84`).
+  - GREEK LETTER SMALL CAPITAL GAMMA (`U+1D26`).
   - TENGE SIGN (`U+20B8`).
   - TURKISH LIRA SIGN (`U+20BA`).
   - MANAT SIGN (`U+20BC`).
+  - DOUBLE STRUCK CAPITAL GAMMA (`U+213E`).
   - LATIN CAPITAL LETTER LAMBDA WITH STROKE (`U+A7DC`).
+  - LATIN SMALL LETTER SCRIPT R (`U+AB4B`).
+  - LATIN SMALL LETTER SCRIPT R WITH RING (`U+AB4C`).
