Optimize glyph of o-part of Numero sign (`№`).

--- a/changes/33.2.4.md
+++ b/changes/33.2.4.md
@@ -11,6 +11,7 @@
   - TENGE SIGN (`U+20B8`).
   - TURKISH LIRA SIGN (`U+20BA`).
   - MANAT SIGN (`U+20BC`).
+  - NUMERO SIGN (`U+2116`).
   - DOUBLE STRUCK CAPITAL GAMMA (`U+213E`).
   - LATIN CAPITAL LETTER LAMBDA WITH STROKE (`U+A7DC`).
   - LATIN SMALL LETTER SCRIPT R (`U+AB4B`).
