Optimize glyphs of three accented tilde punctuations.

--- a/changes/33.2.4.md
+++ b/changes/33.2.4.md
@@ -13,6 +13,9 @@
   - MANAT SIGN (`U+20BC`).
   - NUMERO SIGN (`U+2116`).
   - DOUBLE STRUCK CAPITAL GAMMA (`U+213E`).
+  - TILDE WITH RING ABOVE (`U+2E18`).
+  - TILDE WITH DOT ABOVE (`U+2E1E`).
+  - TILDE WITH DOT BELOW (`U+2E1F`).
   - LATIN CAPITAL LETTER LAMBDA WITH STROKE (`U+A7DC`).
   - LATIN SMALL LETTER SCRIPT R (`U+AB4B`).
   - LATIN SMALL LETTER SCRIPT R WITH RING (`U+AB4C`).
