--- a/changes/33.2.4.md
+++ b/changes/33.2.4.md
@@ -1,4 +1,5 @@
 * Refine shape of the following characters:
+  - GREEK CAPITAL LETTER ARCHAIC SAMPI (`U+0372`) ... GREEK SMALL LETTER ARCHAIC SAMPI (`U+0373`).
   - GREEK CAPITAL LETTER GAMMA (`U+0393`).
   - GREEK LETTER DIGAMMA (`U+03DC`) ... GREEK SMALL LETTER DIGAMMA (`U+03DD`).
   - CYRILLIC CAPITAL LETTER GHE (`U+0413`).
@@ -14,8 +15,6 @@
   - NUMERO SIGN (`U+2116`).
   - DOUBLE STRUCK CAPITAL GAMMA (`U+213E`).
   - TILDE WITH RING ABOVE (`U+2E18`).
-  - TILDE WITH DOT ABOVE (`U+2E1E`).
-  - TILDE WITH DOT BELOW (`U+2E1F`).
+  - TILDE WITH DOT ABOVE (`U+2E1E`) ... TILDE WITH DOT BELOW (`U+2E1F`).
   - LATIN CAPITAL LETTER LAMBDA WITH STROKE (`U+A7DC`).
-  - LATIN SMALL LETTER SCRIPT R (`U+AB4B`).
-  - LATIN SMALL LETTER SCRIPT R WITH RING (`U+AB4C`).
+  - LATIN SMALL LETTER SCRIPT R (`U+AB4B`) ... LATIN SMALL LETTER SCRIPT R WITH RING (`U+AB4C`).
