--- a/changes/33.2.4.md
+++ b/changes/33.2.4.md
@@ -18,3 +18,36 @@
   - TILDE WITH DOT ABOVE (`U+2E1E`) ... TILDE WITH DOT BELOW (`U+2E1F`).
   - LATIN CAPITAL LETTER LAMBDA WITH STROKE (`U+A7DC`).
   - LATIN SMALL LETTER SCRIPT R (`U+AB4B`) ... LATIN SMALL LETTER SCRIPT R WITH RING (`U+AB4C`).
+  - LEFTWARDS ARROW WITH STROKE (`U+219A`).
+  - RIGHTWARDS ARROW WITH STROKE (`U+219B`).
+  - LEFTWARDS TWO HEADED ARROW (`U+219E`) ... DOWNWARDS TWO HEADED ARROW (`U+21A1`).
+  - LEFT RIGHT ARROW WITH STROKE (`U+21AE`).
+  - LEFTWARDS DOUBLE ARROW WITH STROKE (`U+21CD`).
+  - LEFT RIGHT DOUBLE ARROW WITH STROKE (`U+21CE`).
+  - RIGHTWARDS DOUBLE ARROW WITH STROKE (`U+21CF`).
+  - UPWARDS ARROW WITH DOUBLE STROKE (`U+21DE`).
+  - DOWNWARDS ARROW WITH DOUBLE STROKE (`U+21DF`).
+  - RIGHT ARROW WITH SMALL CIRCLE (`U+21F4`).
+  - LEFTWARDS ARROW WITH VERTICAL STROKE (`U+21F7`) ... LEFT RIGHT ARROW WITH DOUBLE VERTICAL STROKE (`U+21FC`).
+  - LEFTWARDS DOUBLE ARROW WITH VERTICAL STROKE (`U+2902`).
+  - RIGHTWARDS DOUBLE ARROW WITH VERTICAL STROKE (`U+2903`).
+  - LEFT RIGHT DOUBLE ARROW WITH VERTICAL STROKE (`U+2904`).
+  - DOWNWARDS ARROW WITH HORIZONTAL STROKE (`U+2908`).
+  - UPWARDS ARROW WITH HORIZONTAL STROKE (`U+2909`).
+  - LEFTWARDS DOUBLE ARROW-TAIL (`U+291B`).
+  - RIGHTWARDS DOUBLE ARROW-TAIL (`U+291C`).
+  - LEFT RIGHT ARROW THROUGH SMALL CIRCLE (`U+2948`).
+  - LEFT ARROW WITH SMALL CIRCLE (`U+2B30`).
+  - LEFTWARDS TRIANGLE-HEADED ARROW WITH DOUBLE HORIZONTAL STROKE (`U+2B7A`) ... DOWNWARDS TRIANGLE-HEADED ARROW WITH DOUBLE HORIZONTAL STROKE (`U+2B7D`).
+* Add Characters:
+  - RIGHT ARROW WITH CIRCLED PLUS (`U+27F4`).
+  - RIGHTWARDS TWO-HEADED ARROW WITH VERTICAL STROKE (`U+2900`).
+  - RIGHTWARDS TWO-HEADED ARROW WITH DOUBLE VERTICAL STROKE (`U+2901`).
+  - RIGHTWARDS TWO-HEADED ARROW FROM BAR (`U+2905`).
+  - RIGHTWARDS TWO-HEADED TRIPLE DASH ARROW (`U+2910`).
+  - RIGHTWARDS ARROW WITH DOTTED STEM (`U+2911`).
+  - RIGHTWARDS ARROW WITH TAIL WITH VERTICAL STROKE (`U+2914`) ... RIGHTWARDS TWO-HEADED ARROW WITH TAIL WITH DOUBLE VERTICAL STROKE (`U+2918`).
+  - LEFTWARDS ARROW TO BLACK DIAMOND (`U+291D`) ... RIGHTWARDS ARROW FROM BAR TO BLACK DIAMOND (`U+2920`).
+  - RIGHTWARDS ARROW THROUGH X (`U+2947`).
+  - LEFT ARROW WITH CIRCLED PLUS (`U+2B32`).
+  - LEFTWARDS TWO-HEADED ARROW WITH VERTICAL STROKE (`U+2B34`) ... LEFTWARDS ARROW THROUGH X (`U+2B3E`).
