--- a/changes/33.2.5.md
+++ b/changes/33.2.5.md
@@ -1,6 +1,8 @@
 * Refine shape of the following characters:
-  - LATIN SMALL LETTER RAMS HORN (`U+0264).
+  - LATIN SMALL LETTER RAMS HORN (`U+0264`).
   - LATIN LETTER AIN (`U+1D25`).
   - MODIFIER LETTER SMALL AIN (`U+1D5C`).
+  - TURKISH LIRA SIGN (`U+20BA`).
+  - MANAT SIGN (`U+20BC`).
   - LATIN CAPITAL LETTER RAMS HORN (`U+A7CB`).
   - MODIFIER LETTER SMALL RAMS HORN (`U+10791`).
