Optimize arch depth of Greek Lower Psi (`ψ`).

--- a/changes/33.2.5.md
+++ b/changes/33.2.5.md
@@ -1,5 +1,7 @@
 * Refine shape of the following characters:
   - LATIN SMALL LETTER RAMS HORN (`U+0264`).
+  - GREEK SMALL LETTER PSI (`U+03C8`).
+  - CYRILLIC SMALL LETTER PSI (`U+0471`).
   - LATIN LETTER AIN (`U+1D25`).
   - MODIFIER LETTER SMALL AIN (`U+1D5C`).
   - TURKISH LIRA SIGN (`U+20BA`).
