--- a/changes/33.2.8.md
+++ b/changes/33.2.8.md
@@ -3,7 +3,8 @@
   - CYRILLIC SMALL LETTER EF (`U+0444`).
   - CYRILLIC CAPITAL LETTER ROUND OMEGA (`U+047A`).
   - CYRILLIC SMALL LETTER ROUND OMEGA (`U+047B`).
-  - ROMAN NUMERAL ONE THOUSAND C D (`U+2180`) ... ROMAN NUMERAL TEN THOUSAND (`U+2182`).
+  - ROMAN NUMERAL ONE THOUSAND C D (`U+2180`).
+  - ROMAN NUMERAL TEN THOUSAND (`U+2182`).
   - ROMAN NUMERAL ONE HUNDRED THOUSAND (`U+2188`).
   - COMBINING CYRILLIC LETTER EF (`U+A69E`).
   - MODIFIER LETTER CYRILLIC SMALL EF (`U+1E042`).
