Make Closed Small Yus (`Ꙙ`/`ꙙ`) slightly wider under QP.

--- a/changes/33.2.8.md
+++ b/changes/33.2.8.md
@@ -1,3 +1,8 @@
+* Make certain characters slightly wider under Quasi-Proportional. Affected characters:
+  - CYRILLIC CAPITAL LETTER CLOSED LITTLE YUS (`U+A658`).
+  - CYRILLIC SMALL LETTER CLOSED LITTLE YUS (`U+A659`).
+  - CYRILLIC CAPITAL LETTER IOTIFIED CLOSED LITTLE YUS (`U+A65C`).
+  - CYRILLIC SMALL LETTER IOTIFIED CLOSED LITTLE YUS (`U+A65D`).
 * Refine shape of the following characters:
   - CYRILLIC CAPITAL LETTER EF (`U+0424`).
   - CYRILLIC SMALL LETTER EF (`U+0444`).
