--- a/changes/33.2.8.md
+++ b/changes/33.2.8.md
@@ -1,3 +1,6 @@
+* Make certain characters slightly wider under Quasi-Proportional. Affected characters:
+  - CYRILLIC CAPITAL LETTER CLOSED LITTLE YUS (`U+A658`).
+  - CYRILLIC CAPITAL LETTER IOTIFIED CLOSED LITTLE YUS (`U+A65C`).
 * Refine shape of the following characters:
   - CYRILLIC CAPITAL LETTER EF (`U+0424`).
   - CYRILLIC SMALL LETTER EF (`U+0444`).
