Add mid-serifed variants of Cyrillic E (#2751).

--- a/changes/33.2.8.md
+++ b/changes/33.2.8.md
@@ -1,3 +1,4 @@
+* Add mid-serifed variants of Cyrillic E (#2751).
 * Make certain characters slightly wider under Quasi-Proportional. Affected characters:
   - CYRILLIC CAPITAL LETTER CLOSED LITTLE YUS (`U+A658`).
   - CYRILLIC CAPITAL LETTER IOTIFIED CLOSED LITTLE YUS (`U+A65C`).
