Optimize arch depths of composites of `n`-like letters.

--- a/changes/33.2.9.md
+++ b/changes/33.2.9.md
@@ -1,6 +1,11 @@
 * Refine shape of the following characters:
+  - LATIN SMALL LETTER N WITH CURL (`U+0235`).
   - CYRILLIC SMALL LETTER E (`U+044D`).
   - CYRILLIC SMALL LETTER UKRAINIAN IE (`U+0454`).
   - CYRILLIC SMALL LETTER E WITH DIAERESIS (`U+04ED`).
+  - GREEK SMALL LETTER ETA WITH PSILI AND YPOGEGRAMMENI (`U+1F90`) ... GREEK SMALL LETTER ETA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI (`U+1F97`).
+  - GREEK SMALL LETTER ETA WITH VARIA AND YPOGEGRAMMENI (`U+1FC2`) ... GREEK SMALL LETTER ETA WITH OXIA AND YPOGEGRAMMENI (`U+1FC4`).
+  - GREEK SMALL LETTER ETA WITH PERISPOMENI AND YPOGEGRAMMENI (`U+1FC7`).
   - COMBINING CYRILLIC LETTER UKRAINIAN IE (`U+A674`).
+  - LATIN SMALL LETTER ENG WITH PALATAL HOOK (`U+1DF14`).
   - MODIFIER LETTER CYRILLIC SMALL E (`U+1E048`).
