Fix `YSmoothMidR` application to `grek/beta`.

--- a/changes/33.2.9.md
+++ b/changes/33.2.9.md
@@ -20,5 +20,8 @@
   - LATIN SMALL LETTER AU (`U+A737`).
   - LATIN SMALL LETTER A REVERSED-SCHWA (`U+AB31`).
   - MODIFIER LETTER SMALL AE (`U+10783`).
+  - MATHEMATICAL ITALIC SMALL BETA (`U+1D6FD`).
+  - MATHEMATICAL BOLD ITALIC SMALL BETA (`U+1D737`).
+  - MATHEMATICAL SANS-SERIF BOLD ITALIC SMALL BETA (`U+1D7AB`).
   - LATIN SMALL LETTER ENG WITH PALATAL HOOK (`U+1DF14`).
   - MODIFIER LETTER CYRILLIC SMALL E (`U+1E048`).
