--- a/changes/33.3.0.md
+++ b/changes/33.3.0.md
@@ -1,1 +1,5 @@
-* Align metrics of `U+23A7` ... `U+23AD` (#2835).
+* Refine shape of the following characters:
+  - LATIN SMALL LETTER SCHWA WITH HOOK (`U+025A`).
+  - LATIN SMALL LETTER REVERSED OPEN E WITH HOOK (`U+025D`).
+  - LATIN SMALL LETTER SCHWA WITH RETROFLEX HOOK (`U+1D95`).
+  - LEFT CURLY BRACKET UPPER HOOK (`U+23A7`) ... RIGHT CURLY BRACKET LOWER HOOK (`U+23AD`) (#2835).
