--- a/changes/33.3.1.md
+++ b/changes/33.3.1.md
@@ -1,4 +1,5 @@
 * Refine shape of the following characters:
+  - LATIN SMALL LETTER BARRED ALPHA (`U+AB30`).
   - LATIN SMALL LETTER OPEN O WITH STROKE (`U+AB3F`).
 * Add Characters:
   - COMBINING DOUBLE CARON (`U+1ACF`).
