--- a/changes/33.3.1.md
+++ b/changes/33.3.1.md
@@ -1,3 +1,6 @@
+* Refine shape of the following characters:
+  - LATIN SMALL LETTER BARRED ALPHA (`U+AB30`).
+  - LATIN SMALL LETTER OPEN O WITH STROKE (`U+AB3F`).
 * Add Characters:
   - COMBINING DOUBLE CARON (`U+1ACF`).
   - COMBINING SHARP SIGN (`U+1AD9`) ... COMBINING DOWN TACK ABOVE (`U+1ADB`).
