Add two remaining J.P. Harrington diacritics from Unicode 17.0.

--- a/changes/33.3.1.md
+++ b/changes/33.3.1.md
@@ -3,5 +3,5 @@
   - LATIN SMALL LETTER OPEN O WITH STROKE (`U+AB3F`).
 * Add Characters:
   - COMBINING DOUBLE CARON (`U+1ACF`).
-  - COMBINING SHARP SIGN (`U+1AD9`) ... COMBINING DOWN TACK ABOVE (`U+1ADB`).
+  - COMBINING SHARP SIGN (`U+1AD9`) ... COMBINING DOT-AND-RING BELOW (`U+1ADD`).
   - COMBINING LEFT TACK ABOVE (`U+1AE0`) ... COMBINING DOUBLE RIGHTWARDS ARROW ABOVE (`U+1AEB`).
