--- a/changes/33.3.1.md
+++ b/changes/33.3.1.md
@@ -5,3 +5,4 @@
   - COMBINING DOUBLE CARON (`U+1ACF`).
   - COMBINING SHARP SIGN (`U+1AD9`) ... COMBINING DOT-AND-RING BELOW (`U+1ADD`).
   - COMBINING LEFT TACK ABOVE (`U+1AE0`) ... COMBINING DOUBLE RIGHTWARDS ARROW ABOVE (`U+1AEB`).
+  - SAUDI RIYAL SIGN (`U+20C1`).
