--- a/changes/33.3.2.md
+++ b/changes/33.3.2.md
@@ -1,1 +1,1 @@
- - Changed the default style of Cyrillic lowercase Ef (ф) in Aile and Etoile (upright) to use non-split rings, for better style consistency (##2879).
+ - Changed the default style of Cyrillic lowercase Ef (ф) in Aile and Etoile (upright) to use non-split rings, for better style consistency (#2879).
