Unify Combining Square (`◌᫤`, `◌̻`) with Combining Bridge
(`◌͆`, `◌̪`, `◌᫣`, `◌̺`).

--- a/changes/33.3.2.md
+++ b/changes/33.3.2.md
@@ -1,2 +1,5 @@
- - Changed the default style of Cyrillic lowercase Ef (ф) in Aile and Etoile (upright) to use non-split rings, for better style consistency (#2879).
- - Fix style assignment of `l` in Libration Mono style (SS06) (#2882).
+* Refine shape of the following characters:
+  - COMBINING SQUARE BELOW (`U+0349`).
+  - COMBINING SQUARE ABOVE (`U+1AE4`).
+* Changed the default style of Cyrillic lowercase Ef (ф) in Aile and Etoile (upright) to use non-split rings, for better style consistency (#2879).
+* Fix style assignment of `l` in Libration Mono style (SS06) (#2882).
