Add ligation set for markdown checkboxes under `dlig` feature. This ligation will render sequcences like `- [ ]` and `- [x]` as checkbox shape.

--- a/changes/33.3.2.md
+++ b/changes/33.3.2.md
@@ -2,3 +2,4 @@
   - COMBINING SQUARE BELOW (`U+0349`).
   - COMBINING SQUARE ABOVE (`U+1AE4`).
 * Changed the default style of Cyrillic lowercase Ef (ф) in Aile and Etoile (upright) to use non-split rings, for better style consistency (#2879).
+* Add ligation set for markdown checkboxes under `dlig` feature. This ligation will render sequcences like `- [ ]` and `- [x]` as checkbox shape.
