--- a/changes/33.3.2.md
+++ b/changes/33.3.2.md
@@ -1,5 +1,7 @@
 * Refine shape of the following characters:
+  - COMBINING INVERTED DOUBLE ARCH BELOW (`U+032B`).
   - COMBINING SQUARE BELOW (`U+0349`).
+  - COMBINING INVERTED DOUBLE ARCH ABOVE (`U+1AC7`).
   - COMBINING SQUARE ABOVE (`U+1AE4`).
 * Changed the default style of Cyrillic lowercase Ef (ф) in Aile and Etoile (upright) to use non-split rings, for better style consistency (#2879).
 * Add ligation set for markdown checkboxes under `dlig` feature. This ligation will render sequcences like `- [ ]` and `- [x]` as checkbox shape.
