--- a/changes/33.3.2.md
+++ b/changes/33.3.2.md
@@ -5,3 +5,5 @@
   - COMBINING SQUARE ABOVE (`U+1AE4`).
 * Changed the default style of Cyrillic lowercase Ef (ф) in Aile and Etoile (upright) to use non-split rings, for better style consistency (#2879).
 * Add ligation set for markdown checkboxes under `dlig` feature. This ligation will render sequcences like `- [ ]` and `- [x]` as checkbox shape.
+* Add Characters:
+  - LONG RIGHTWARDS ARROW OVER LONG LEFTWARDS ARROW (`U+1F8D0`) ... LONG LEFT RIGHT ARROW WITH DEPENDENT LOBE (`U+1F8D8`).
