Add Cyrillic number surroundings

--- a/changes/33.3.2.md
+++ b/changes/33.3.2.md
@@ -1,3 +1,11 @@
+* Add Characters:
+  - LONG RIGHTWARDS ARROW OVER LONG LEFTWARDS ARROW (`U+1F8D0`) ... LONG LEFT RIGHT ARROW WITH DEPENDENT LOBE (`U+1F8D8`).
+  - Cyrillic number surroundings:
+    - COMBINING CYRILLIC HUNDRED THOUSANDS SIGN (`U+0488`).
+    - COMBINING CYRILLIC MILLIONS SIGN (`U+0489`).
+    - COMBINING CYRILLIC TEN MILLIONS SIGN (`U+A670`).
+    - COMBINING CYRILLIC HUNDRED MILLIONS SIGN (`U+A671`).
+    - COMBINING CYRILLIC THOUSAND MILLIONS SIGN (`U+A672`).  
 * Refine shape of the following characters:
   - COMBINING INVERTED DOUBLE ARCH BELOW (`U+032B`).
   - COMBINING SQUARE BELOW (`U+0349`).
@@ -6,5 +14,3 @@
 * Changed the default style of Cyrillic lowercase Ef (ф) in Aile and Etoile (upright) to use non-split rings, for better style consistency (#2879).
 * Add ligation set for markdown checkboxes under `dlig` feature. This ligation will render sequcences like `- [ ]` and `- [x]` as checkbox shape.
 * Fix mapping of `U+2B38` with `U+2911`, and `U+2B37` with `U+2910`.
-* Add Characters:
-  - LONG RIGHTWARDS ARROW OVER LONG LEFTWARDS ARROW (`U+1F8D0`) ... LONG LEFT RIGHT ARROW WITH DEPENDENT LOBE (`U+1F8D8`).
