--- a/changes/33.3.2.md
+++ b/changes/33.3.2.md
@@ -5,7 +5,8 @@
     - COMBINING CYRILLIC MILLIONS SIGN (`U+0489`).
     - COMBINING CYRILLIC TEN MILLIONS SIGN (`U+A670`).
     - COMBINING CYRILLIC HUNDRED MILLIONS SIGN (`U+A671`).
-    - COMBINING CYRILLIC THOUSAND MILLIONS SIGN (`U+A672`).  
+    - COMBINING CYRILLIC THOUSAND MILLIONS SIGN (`U+A672`).
+    - COMBINING ENCLOSING CIRCLE (`U+20DD`).
 * Refine shape of the following characters:
   - COMBINING INVERTED DOUBLE ARCH BELOW (`U+032B`).
   - COMBINING SQUARE BELOW (`U+0349`).
