--- a/changes/33.3.2.md
+++ b/changes/33.3.2.md
@@ -10,8 +10,12 @@
 * Refine shape of the following characters:
   - COMBINING INVERTED DOUBLE ARCH BELOW (`U+032B`).
   - COMBINING SQUARE BELOW (`U+0349`).
+  - CYRILLIC CAPITAL LETTER UK (`U+0478`).
+  - CYRILLIC SMALL LETTER UK (`U+0479`).
   - COMBINING INVERTED DOUBLE ARCH ABOVE (`U+1AC7`).
   - COMBINING SQUARE ABOVE (`U+1AE4`).
+  - CYRILLIC SMALL LETTER UNBLENDED UK (`U+1C88`).
+  - CYRILLIC CAPITAL LETTER MONOGRAPH UK (`U+A64A`).
 * Changed the default style of Cyrillic lowercase Ef (ф) in Aile and Etoile (upright) to use non-split rings, for better style consistency (#2879).
 * Add ligation set for markdown checkboxes under `dlig` feature. This ligation will render sequcences like `- [ ]` and `- [x]` as checkbox shape.
 * Fix mapping of `U+2B38` with `U+2911`, and `U+2B37` with `U+2910`.
