--- a/changes/33.3.2.md
+++ b/changes/33.3.2.md
@@ -1,4 +1,8 @@
 * Add Characters:
+  - COMBINING LEFT HARPOON ABOVE (`U+20D0`).
+  - COMBINING RIGHT HARPOON ABOVE (`U+20D1`).
+  - COMBINING RIGHTWARDS HARPOON WITH BARB DOWNWARDS (`U+20EC`).
+  - COMBINING LEFTWARDS HARPOON WITH BARB DOWNWARDS (`U+20ED`).
   - LONG RIGHTWARDS ARROW OVER LONG LEFTWARDS ARROW (`U+1F8D0`) ... LONG LEFT RIGHT ARROW WITH DEPENDENT LOBE (`U+1F8D8`).
   - Cyrillic number surroundings:
     - COMBINING CYRILLIC HUNDRED THOUSANDS SIGN (`U+0488`).
@@ -16,6 +20,12 @@
   - COMBINING SQUARE ABOVE (`U+1AE4`).
   - CYRILLIC SMALL LETTER UNBLENDED UK (`U+1C88`).
   - CYRILLIC CAPITAL LETTER MONOGRAPH UK (`U+A64A`).
+  - COMBINING UPWARDS ARROW BELOW (`U+034E`).
+  - COMBINING DOWNWARDS ARROW (`U+1AB3`).
+  - COMBINING LEFT ARROW ABOVE (`U+20D6`).
+  - COMBINING RIGHT ARROW ABOVE (`U+20D7`).
+  - COMBINING LEFT ARROW BELOW (`U+20EE`).
+  - COMBINING RIGHT ARROW BELOW (`U+20EF`).
 * Changed the default style of Cyrillic lowercase Ef (ф) in Aile and Etoile (upright) to use non-split rings, for better style consistency (#2879).
 * Add ligation set for markdown checkboxes under `dlig` feature. This ligation will render sequcences like `- [ ]` and `- [x]` as checkbox shape.
 * Fix mapping of `U+2B38` with `U+2911`, and `U+2B37` with `U+2910`.
