--- a/changes/33.3.2.md
+++ b/changes/33.3.2.md
@@ -14,6 +14,7 @@
 * Refine shape of the following characters:
   - COMBINING INVERTED DOUBLE ARCH BELOW (`U+032B`).
   - COMBINING SQUARE BELOW (`U+0349`).
+  - COMBINING LEFT RIGHT ARROW BELOW (`U+034D`).
   - COMBINING UPWARDS ARROW BELOW (`U+034E`).
   - CYRILLIC CAPITAL LETTER UK (`U+0478`).
   - CYRILLIC SMALL LETTER UK (`U+0479`).
@@ -23,6 +24,10 @@
   - CYRILLIC SMALL LETTER UNBLENDED UK (`U+1C88`).
   - COMBINING LEFT ARROW ABOVE (`U+20D6`).
   - COMBINING RIGHT ARROW ABOVE (`U+20D7`).
+  - COMBINING THREE DOTS ABOVE (`U+20DB`).
+  - COMBINING FOUR DOTS ABOVE (`U+20DC`).
+  - COMBINING LEFT RIGHT ARROW ABOVE (`U+20E1`).
+  - COMBINING TRIPLE UNDERDOT (`U+20E8`).
   - COMBINING LEFT ARROW BELOW (`U+20EE`).
   - COMBINING RIGHT ARROW BELOW (`U+20EF`).
   - CYRILLIC CAPITAL LETTER MONOGRAPH UK (`U+A64A`).
