Add SLAVONIC ASTERISK

--- a/changes/33.3.2.md
+++ b/changes/33.3.2.md
@@ -11,6 +11,7 @@
     - COMBINING CYRILLIC HUNDRED MILLIONS SIGN (`U+A671`).
     - COMBINING CYRILLIC THOUSAND MILLIONS SIGN (`U+A672`).
     - COMBINING ENCLOSING CIRCLE (`U+20DD`).
+  - SLAVONIC ASTERISK (`U+A673`).
 * Refine shape of the following characters:
   - COMBINING INVERTED DOUBLE ARCH BELOW (`U+032B`).
   - COMBINING SQUARE BELOW (`U+0349`).
