B/complete cyrl ext b (#2909)
* Add SLAVONIC ASTERISK

* Complete old abk letters

--- a/changes/33.3.2.md
+++ b/changes/33.3.2.md
@@ -11,6 +11,15 @@
     - COMBINING CYRILLIC HUNDRED MILLIONS SIGN (`U+A671`).
     - COMBINING CYRILLIC THOUSAND MILLIONS SIGN (`U+A672`).
     - COMBINING ENCLOSING CIRCLE (`U+20DD`).
+  - SLAVONIC ASTERISK (`U+A673`).
+  - CYRILLIC CAPITAL LETTER DWE (`U+A680`).
+  - CYRILLIC SMALL LETTER DWE (`U+A681`).
+  - CYRILLIC CAPITAL LETTER TSWE (`U+A68E`).
+  - CYRILLIC SMALL LETTER TSWE (`U+A68F`).
+  - CYRILLIC CAPITAL LETTER TSSE (`U+A690`).
+  - CYRILLIC SMALL LETTER TSSE (`U+A691`).
+  - CYRILLIC CAPITAL LETTER SHWE (`U+A696`).
+  - CYRILLIC SMALL LETTER SHWE (`U+A697`).
 * Refine shape of the following characters:
   - COMBINING INVERTED DOUBLE ARCH BELOW (`U+032B`).
   - COMBINING SQUARE BELOW (`U+0349`).
