Optimize widths/metrics of wide modifier letters.

--- a/changes/33.3.4.md
+++ b/changes/33.3.4.md
@@ -1,4 +1,5 @@
 * Add Characters:
   - COMBINING OPEN MARK BELOW (`U+1AB7`).
   - COMBINING DOUBLE OPEN MARK BELOW (`U+1AB8`).
+* Refine shape of Modifier Letter Unaspirated (`U+02ED`).
 * Refine serifs of Cyrillic Lower Dwe (`U+A681`) under italics.
