--- a/changes/33.3.4.md
+++ b/changes/33.3.4.md
@@ -1,5 +1,8 @@
 * Add Characters:
   - COMBINING OPEN MARK BELOW (`U+1AB7`).
   - COMBINING DOUBLE OPEN MARK BELOW (`U+1AB8`).
-* Refine shape of Modifier Letter Unaspirated (`U+02ED`).
+* Refine shape of the following characters:
+  - MODIFIER LETTER UNASPIRATED (`U+02ED`).
+  - MODIFIER LETTER LEFT TACK (`U+AB6A`).
+  - MODIFIER LETTER RIGHT TACK (`U+AB6B`).
 * Refine serifs of Cyrillic Lower Dwe (`U+A681`) under italics.
