Fix character mapping for: `U+2916`, `U+2B3B`, `U+2905` and `U+2B36`.

--- a/changes/33.3.4.md
+++ b/changes/33.3.4.md
@@ -6,3 +6,4 @@
   - MODIFIER LETTER LEFT TACK (`U+AB6A`).
   - MODIFIER LETTER RIGHT TACK (`U+AB6B`).
 * Refine serifs of Cyrillic Lower Dwe (`U+A681`) under italics.
+* Fix character mapping for: `U+2916`, `U+2B3B`, `U+2905` and `U+2B36`.
