Add new characters and refine existing shapes in glyph definitions

--- a/changes/33.3.4.md
+++ b/changes/33.3.4.md
@@ -1,6 +1,10 @@
 * Add Characters:
   - COMBINING OPEN MARK BELOW (`U+1AB7`).
   - COMBINING DOUBLE OPEN MARK BELOW (`U+1AB8`).
+  - SUN (`U+2609`) (#2935).
+  - PERMANENT PAPER SIGN (`U+267E`) (#2935).
+  - BLACK CIRCLE WITH WHITE DOT RIGHT (`U+2688`) (#2935).
+  - BLACK CIRCLE WITH TWO WHITE DOTS (`U+2689`) (#2935).
 * Refine shape of the following characters:
   - MODIFIER LETTER UNASPIRATED (`U+02ED`).
   - MODIFIER LETTER LEFT TACK (`U+AB6A`).
