--- a/changes/33.3.5.md
+++ b/changes/33.3.5.md
@@ -4,3 +4,7 @@
   - CYRILLIC CAPITAL LETTER SHHA (`U+04BA`).
   - CYRILLIC CAPITAL LETTER SHHA WITH DESCENDER (`U+0526`).
   - CYRILLIC CAPITAL LETTER HWE (`U+A694`).
+* Refine spacing of diagonal-tailed `i` and `j`.
+* Add Characters:
+  - LATIN CAPITAL LETTER VY (`U+A760`).
+  - LATIN SMALL LETTER VY (`U+A761`).
