--- a/changes/33.3.5.md
+++ b/changes/33.3.5.md
@@ -1,8 +1,14 @@
 * Refine shape of the following characters:
   - CYRILLIC CAPITAL LETTER DJE (`U+0402`).
   - CYRILLIC CAPITAL LETTER TSHE (`U+040B`).
+  - CYRILLIC CAPITAL LETTER YAT (`U+0462`).
+  - CYRILLIC SMALL LETTER YAT (`U+0463`).
   - CYRILLIC CAPITAL LETTER SHHA (`U+04BA`).
   - CYRILLIC CAPITAL LETTER SHHA WITH DESCENDER (`U+0526`).
+  - CYRILLIC SMALL LETTER TALL YAT (`U+1C87`).
+  - COMBINING CYRILLIC LETTER YAT (`U+2DFA`).
+  - CYRILLIC CAPITAL LETTER IOTIFIED YAT (`U+A652`).
+  - CYRILLIC SMALL LETTER IOTIFIED YAT (`U+A653`).
   - CYRILLIC CAPITAL LETTER HWE (`U+A694`).
 * Refine spacing of diagonal-tailed `i` and `j`.
 * Add Characters:
