--- a/changes/33.3.6.md
+++ b/changes/33.3.6.md
@@ -1,2 +1,4 @@
+* Add Characters
+  * CIRCLED NUMBER TEN ON BLACK SQUARE (`U+3248`) .. CIRCLED NUMBER EIGHTY ON BLACK SQUARE (`U+324F`) (#2963).
 * Fix underline shapes of APL operators (#2960).
 * Add non-APL variant for ⍊ (U+234A) and ⍑ (U+2351) (#2960).
