Add keyboard UI symbols: INSERTION SYMBOL (`U+2380`) .. EMPHASIS SYMBOL (`U+2383`) (#2939)

--- a/changes/33.3.6.md
+++ b/changes/33.3.6.md
@@ -1,5 +1,6 @@
 * Add Characters
   * CIRCLED NUMBER TEN ON BLACK SQUARE (`U+3248`) .. CIRCLED NUMBER EIGHTY ON BLACK SQUARE (`U+324F`) (#2963).
+  * INSERTION SYMBOL (`U+2380`) .. EMPHASIS SYMBOL (`U+2383`) (#2939).
 * Refine shape of the following characters:
   - CYRILLIC CAPITAL LETTER HARD SIGN (`U+042A`).
   - CYRILLIC SMALL LETTER HARD SIGN (`U+044A`).
