Cleanup surrounding iotated letters.

--- a/changes/33.4.0.md
+++ b/changes/33.4.0.md
@@ -4,7 +4,16 @@
   - LATIN SMALL LETTER GHA (`U+01A3`).
   - CYRILLIC CAPITAL LETTER YU (`U+042E`).
   - CYRILLIC SMALL LETTER YU (`U+044E`).
+  - CYRILLIC CAPITAL LETTER YAT (`U+0462`).
+  - CYRILLIC SMALL LETTER YAT (`U+0463`).
+  - CYRILLIC CAPITAL LETTER IOTIFIED LITTLE YUS (`U+0468`).
+  - CYRILLIC SMALL LETTER IOTIFIED LITTLE YUS (`U+0469`).
+  - CYRILLIC CAPITAL LETTER IOTIFIED BIG YUS (`U+046C`).
+  - CYRILLIC SMALL LETTER IOTIFIED BIG YUS (`U+046D`).
+  - COMBINING CYRILLIC LETTER YAT (`U+2DFA`).
   - COMBINING CYRILLIC CYRILLIC LETTER YU (`U+2DFB`).
-  - CYRILLIC CAPITAL LETTER REVERSED YU (`U+A654`).
-  - CYRILLIC SMALL LETTER REVERSED YU (`U+A655`).
+  - COMBINING CYRILLIC LETTER IOTIFIED BIG YUS (`U+2DFF`).
+  - CYRILLIC CAPITAL LETTER IOTIFIED YAT (`U+A652`) ... CYRILLIC CAPITAL LETTER IOTIFIED A (`U+A656`).
+  - CYRILLIC CAPITAL LETTER IOTIFIED CLOSED LITTLE YUS (`U+A65C`).
+  - CYRILLIC SMALL LETTER IOTIFIED CLOSED LITTLE YUS (`U+A65D`).
   - MODIFIER LETTER CYRILLIC SMALL YU (`U+1E049`).
